syntax = "proto3";

package br.gasmartins.grpc.sensors;

option java_package = "br.gasmartins.grpc.sensors";
option java_multiple_files = true;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service SensorService {
  rpc store(stream SensorData) returns (Sensor) {
    option (google.api.http) = {
      post : "/v1/sensors"
      body: "*"
    };
  }

  rpc findById(google.protobuf.StringValue) returns (Sensor) {
    option (google.api.http) = {
      get: "/v1/sensors/{value}"
    };
  }
}

message Location {
  float latitude = 1;
  float longitude = 2;
}

message SensorData {

  string device_id = 1;
  string vehicle_id = 2;
  Location location = 3;
  float speed = 4;
  google.protobuf.Timestamp occurredOn = 5;

}

message Sensor {

  string device_id = 1;
  string address = 2;
  string state = 3;
  string city = 4;
  string zipCode = 5;

}